--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
 
     <section id="banner">
-        <img src="img/Icon.png" alt="DLOP" width="500">
+        <img src="Icon.png" alt="DLOP" width="500">
         <h1>Daily Life of Pets </h1>
         <p>by Suzannita Yuliankasih</p>
     </section>
