--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="img/Icon.png" type="image/png">
+<link rel="icon" href="Icon.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -26,7 +26,7 @@
 <main>
     <section class="column">
         <aside class="card">
-            <img src="img/agus.JPG" alt="agus" style="width:100%">
+            <img src="agus.JPG" alt="agus" style="width:100%">
             <article class="container">
                 <h2>AGUS</h2>
                 <p class="title">Musang Bulan (Paguma Larvata)</p>
@@ -38,7 +38,7 @@
 
     <section class="column">
         <aside class="card">
-            <img src="img/cici2.JPG" alt="cici2" style="width:100%">
+            <img src="cici2.JPG" alt="cici2" style="width:100%">
             <article class="container">
                 <h2>CICI</h2>
                 <p class="title">Musang Bulan (Paguma Larvata)</p>
@@ -50,7 +50,7 @@
 
     <section class="column">
         <aside class="card">
-            <img src="img/Agustomas.JPG" alt="cici2" style="width:100%">
+            <img src="Agustomas.JPG" alt="cici2" style="width:100%">
             <article class="container">
                 <h2>THOMAS</h2>
                 <p class="title">Musang Bulan (Paguma Larvata)</p>
@@ -62,7 +62,7 @@
 
     <section class="column">
         <aside class="card">
-            <img src="img/d5c70df9-7f2e-47c4-a3e3-0c9740cdfc3e.jpg" alt="gendut" style="width:100%">
+            <img src="d5c70df9-7f2e-47c4-a3e3-0c9740cdfc3e.jpg" alt="gendut" style="width:100%">
             <article class="container">
                 <h2>GENDUT</h2>
                 <p class="title">Kucing Domestik / Moggie (Felis silvestris lybica)</p>
@@ -76,7 +76,7 @@
 
     <aside class="footer">
         <p>Daily Life of Pets </p>
-        <img src="img/profpic.jpeg" alt="profpic" width="500">
+        <img src="profpic.jpeg" alt="profpic" width="500">
         <p>by Suzannita Yuliankasih</p>
         <p>26 F | Civet Breeder | 日本語文学科 of Brawijaya University</p>
     </aside>
